<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="change_password_success">Password changed successfully</string>
    <string name="log_out">Log out</string>
    <string name="log_out_desc">Are you sure you want to log out?</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_desc">Are you sure you want to delete this account?</string>
    <string name="app_version">Version %s</string>
</resources>